# MatKit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml  skills.md
.github/workflows/: ci.yml
alcf/: README.md
alcf/aurora/mofid/: Makefile  README.md
alcf/aurora/pacmof2/: README.md  install.sh
alcf/aurora/pacmof2_graspa_workflow/: install.sh  run.sh  submit.sh  workflow.py
alcf/crux/: README.md
scripts/: README.md
scripts/graspa/: isotherm_config.yaml  setup_isotherms.py
scripts/pygraspa/: isotherm_config.yaml  setup_isotherms.py
scripts/zeopp/: submit.sh
src/matkit/: __init__.py  cli.py  types.py
src/matkit/graspa/: __init__.py  graspa.py
src/matkit/graspa_sycl/: __init__.py  graspa_sycl.py
src/matkit/io/: __init__.py  convert_pubchem_json_to_xyz.py  convert_smiles_to_xyz.py
src/matkit/mace/: mace.py
src/matkit/mlip/: __init__.py  mace_opt.py  uma.py
src/matkit/orca/: __init__.py  orca.py
src/matkit/pacmof2/: __init__.py  pacmof2.py
src/matkit/plot/: __init__.py  isotherm.py  parsers.py
src/matkit/pygraspa/: __init__.py  pygraspa.py
src/matkit/raspa2/: __init__.py  raspa2.py
src/matkit/raspa3/: __init__.py  raspa3.py
src/matkit/tobacco/: __init__.py  create_linker_from_smiles.py
src/matkit/utils/: __init__.py  cif.py  cifsampler.py  remove_solvent.py  template.py  unitcell_calculator.py
src/matkit/zeopp/: __init__.py  zeopp.py
tests/: conftest.py  test_cli.py  test_graspa.py  test_plot.py  test_pygraspa.py  test_raspa3.py  test_utils.py  test_zeopp.py
tests/data/: force_field_mixing_rules.def  mixture_isotherm.json  pseudo_atoms.def  single_isotherm.json  test_structure.cif
tests/data/zeopp/: test_structure.chan  test_structure.psd  test_structure.res  test_structure.sa  test_structure.vol
utils/chargemol/: convert_cif_to_POSCAR.py  convert_minimization_pdb_to_cif.py  convert_pdb_to_cif.py  convert_smiles_to_cif_ver2.py  convert_vasp_to_cif.py
(+20 files in other folders)
