[project]
name = "matkit"
version = "0.1.0"
description = "A modular Python toolkit for setting up and managing molecular simulations for RASPA, gRASPA, DFT, MD, and more."
authors = [
    { name="Thang Pham", email="tpham@anl.gov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
[tool.ruff.lint]
select = ["E", "F"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"matkit.raspa2.files.template" = ["*"]

