[project]
name = "matkit"
version = "0.1.0"
description = "A modular Python toolkit for setting up and managing molecular simulations for RASPA, gRASPA, DFT, MD, and more."
authors = [
    { name="Thang Pham", email="tpham@anl.gov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22",
    "click>=8.0",
    "networkx>=2.6",
    "numpy>=1.22",
]

[project.optional-dependencies]
rdkit = ["rdkit"]
mlip = ["mace-torch"]
all = ["rdkit", "mace-torch"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
matkit = "matkit.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"matkit.raspa2.files.template" = ["*"]
"matkit.graspa_sycl.files.template" = ["*"]
"matkit.graspa.files.template" = ["*"]
"matkit.graspa.files.template_mixture" = ["*"]
"matkit.graspa.files.template_co2_n2" = ["*"]
"matkit.graspa.files.template_mixture_isotherm" = ["*"]
